# baromesh

./: .gitmodules  CMakeLists.txt  README  daemon.cpp  myrio-overrides.cmake  robotproxy.hpp
common/: CMakeLists.txt
common/include/baromesh/: daemon.hpp  dongledevicepath.hpp  iocore.hpp  log.hpp  setserialportoptions.hpp  status.hpp  system_error.hpp  tcpclient.hpp  tcpserver.hpp  websocketacceptor.hpp  websocketconnector.hpp  websocketconnectorconfig.hpp  websocketlogger.hpp  websocketmessagequeue.hpp  websocketpolyserver.hpp
common/setupapi/: DeviceImages.h  DeviceInfo.h
common/src/: dongledevicepath.cpp  iocore.cpp  log.cpp  system_error.cpp
common/src/dongledevicepath/: linux.cpp  osx.cpp  osx_uniqueioobject.hpp  win32.cpp  windows.cpp  windowserror.hpp
common/src/usbcdc/: devices.hpp  linux.cpp  osx.cpp  osx_sharedioobject.hpp  osx_uniqueioobject.hpp  windows.cpp  windows_error.hpp  windows_guids.hpp  windows_utf.hpp
daemon/: CMakeLists.txt
daemon/src/: basicdongle.hpp  breaker.hpp  computerid.hpp  daemonserver.hpp  dongle.hpp  dongledevicepath.cpp  dongledevicepath.hpp  main.cpp  rundaemon.cpp  rundaemon.hpp  rundongle.cpp
daemon/src/daemonservice/: osx.cpp
daemon/src/daemonservice/macosx/: com.barobo.LinkbotLabs.plist
daemon/src/main/: linux.cpp  osx.cpp  win32.cpp
include/baromesh/: baromesh.hpp  dongledevicepath.hpp  dongleexception.hpp  dongleproxy.hpp  dongletransport.hpp  error.hpp  linkbot.h  linkbot.hpp  robotproxy.hpp  robottransport.hpp  status.hpp  system_error.hpp
interfaces/: CMakeLists.txt  commontypes.proto  daemon.proto  dongle.proto  gen-daemon.pb.cpp  gen-daemon.pb.hpp  gen-dongle.pb.cpp  gen-dongle.pb.hpp  gen-robot.pb.cpp  gen-robot.pb.hpp  robot.proto
robottests/: CMakeLists.txt  robotservice.hpp  set-attribute.cpp  tags
src/: basicdaemon.hpp  daemon.cpp  daemon.hpp  dongledevicepath.cpp  dongledevicepath.hpp  dongleexception.hpp  dongleproxy.cpp  dongleproxy.hpp  dongletransport.cpp  dongletransport.hpp  iocore.cpp  iocore.hpp  linkbot.c.cpp  linkbot.cpp  main.cpp  reliableusb.hpp  robotproxy.cpp  robotproxy.hpp  robottransport.cpp  robottransport.hpp  system_error.cpp
src/daemon/: basicdongle.hpp  breaker.hpp  daemonserver.hpp  dongledevicepath.cpp  main.cpp  rundongle.cpp  rundongle.hpp
src/daemon/daemonservice/: linux.cpp  win32.cpp
src/daemon/dongledevicepath/: linux.cpp  osx.cpp  win32.cpp
src/dongledevicepath/: linux.cpp  osx.cpp  win32.cpp
tests/: CMakeLists.txt  accelerometer.cpp  lavalamp-linkbot-api.cpp  lavalamp.cpp  testmovement.cpp
